--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы.<br>Какой GPT лучше использовать и почему.</p>
                 <a href="https://t.me/syntxaibot?start=aff_325696676" target="_blank" class="lesson-link">Перейти в Syntx AI Bot</a>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 1 Урок 1 .MOV" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -140,7 +140,7 @@
                 <h2 class="lesson-title">УРОК 2 | Ч.1</h2>
                 <p class="lesson-desc">От идеи до сценария - как использовать GPT для рекламы, мультика или истории.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 1 урок 2 часть 1.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -151,7 +151,7 @@
                 <h2 class="lesson-title">УРОК 2 | Ч.2</h2>
                 <p class="lesson-desc">Продолжение работы со сценариями и промптами.</p>
             </div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 1 урок 2  часть 2.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -176,13 +176,13 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon14.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 1 | Ч.1</h2><p class="lesson-desc">Создание LORA во FLUX</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 2 урок 1 часть 1.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon15.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-180"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 1 | Ч.2</h2><p class="lesson-desc">Практика создания LORA во FLUX</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 2 урок 1 часть 2.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon16.jpg');">
@@ -220,7 +220,7 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon19.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация по MJ. Редактор и описатель.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 1.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -238,7 +238,7 @@
                 референсов стиля.
             </p>
         </div>
-        <a href="#" class="btn-primary">СМОТРЕТЬ</a>
+        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 2 часть 1.mov" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -255,7 +255,7 @@
                 референсов стиля.
             </p>
         </div>
-        <a href="#" class="btn-primary">СМОТРЕТЬ</a>
+        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 2 часть 2.mov" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -273,7 +273,7 @@
             </p>
             <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">Миджорней Васильевич</a>
         </div>
-        <a href="#" class="btn-primary">СМОТРЕТЬ</a>
+        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 2 часть 3.mov" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -285,7 +285,7 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon21.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-230"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Создание персонажа. Omnireference.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 3.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -309,25 +309,25 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon23.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-275"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация, бесплатные альтернативы, коммерческие заказы.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 1 .mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon24.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 2</h2><p class="lesson-desc">Фотосессии с множеством героев пошагово.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 2.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon25.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Смена ракурсов, изменение фона с сохранением героя.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 3 .mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon26.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 4</h2><p class="lesson-desc">Альтернативный способ сохранения: Runway Frames.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 4 .mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -351,14 +351,14 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon28.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-260"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 1</h2><p class="lesson-desc">Навигация по видео-нейросетям.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 5 урок 1.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon29.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-250"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 2</h2><p class="lesson-desc">Veo 3.1 - Text to Video.<br>Видео без референса.</p>
             <a href="https://s3.ru1.storage.beget.cloud/5c700d161bd9-infinite-sabina/neiro_bistro_failes/новый 1.txt" target="_blank" class="lesson-link">ИНСТРУКЦИЯ ДЛЯ ChatGPT</a></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 5 урок 2.mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon30.jpg');">
@@ -406,13 +406,13 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon35.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 1</h2><p class="lesson-desc">Синтез речи, озвучка текста, генератор звуков.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 6 урок 1 .mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon36.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-170"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 2</h2><p class="lesson-desc">Suno. Создание песен и музыки для кино.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 6 урок 2 .mov" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon37.jpg');">
@@ -466,4 +466,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
