--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы.<br>Какой GPT лучше использовать и почему.</p>
                 <a href="https://t.me/syntxaibot?start=aff_325696676" target="_blank" class="lesson-link">Перейти в Syntx AI Bot</a>
             </div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 1 Урок 1 .MOV" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m1_y1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -466,5 +466,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
