--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <h2 class="lesson-title">УРОК 2 | Ч.1</h2>
                 <p class="lesson-desc">От идеи до сценария - как использовать GPT для рекламы, мультика или истории.</p>
             </div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 1 урок 2 часть 1.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m1_y2_1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -151,7 +151,7 @@
                 <h2 class="lesson-title">УРОК 2 | Ч.2</h2>
                 <p class="lesson-desc">Продолжение работы со сценариями и промптами.</p>
             </div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 1 урок 2  часть 2.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m1_y2_2.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -176,7 +176,7 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon14.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 1 | Ч.1</h2><p class="lesson-desc">Создание LORA во FLUX</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 2 урок 1 часть 1.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m2_y1_1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon15.jpg');">
@@ -220,7 +220,7 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon19.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация по MJ. Редактор и описатель.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 1.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m3_y1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -238,7 +238,7 @@
                 референсов стиля.
             </p>
         </div>
-        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 2 часть 1.mov" class="btn-primary">СМОТРЕТЬ</a>
+        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m3_y2_1.mp4" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -255,7 +255,7 @@
                 референсов стиля.
             </p>
         </div>
-        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 2 часть 2.mov" class="btn-primary">СМОТРЕТЬ</a>
+        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m3_y2_2.mp4" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -273,7 +273,7 @@
             </p>
             <a href="https://chatgpt.com/g/g-69431b8e650081919f68555edbef8db3-midzhornei-vasilevich" target="_blank" class="lesson-link">Миджорней Васильевич</a>
         </div>
-        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 2 часть 3.mov" class="btn-primary">СМОТРЕТЬ</a>
+        <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m3_y2_3.mp4" class="btn-primary">СМОТРЕТЬ</a>
     </div>
 </section>
 
@@ -285,7 +285,7 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon21.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-230"><div class="lesson-module">МОДУЛЬ 3</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Создание персонажа. Omnireference.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 3 урок 3.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m3_y3.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -309,25 +309,25 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon23.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-275"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 1</h2><p class="lesson-desc">Навигация, бесплатные альтернативы, коммерческие заказы.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 1 .mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m4_y1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon24.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 2</h2><p class="lesson-desc">Фотосессии с множеством героев пошагово.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 2.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m4_y2.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon25.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 3</h2><p class="lesson-desc">Смена ракурсов, изменение фона с сохранением героя.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 3 .mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m4_y3.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon26.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-240"><div class="lesson-module">МОДУЛЬ 4</div><h2 class="lesson-title">УРОК 4</h2><p class="lesson-desc">Альтернативный способ сохранения: Runway Frames.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 4 урок 4 .mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m4_y4.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -351,38 +351,38 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon28.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-260"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 1</h2><p class="lesson-desc">Навигация по видео-нейросетям.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 5 урок 1.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m5_y1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon29.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-250"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 2</h2><p class="lesson-desc">Veo 3.1 - Text to Video.<br>Видео без референса.</p>
             <a href="https://s3.ru1.storage.beget.cloud/5c700d161bd9-infinite-sabina/neiro_bistro_failes/новый 1.txt" target="_blank" class="lesson-link">ИНСТРУКЦИЯ ДЛЯ ChatGPT</a></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 5 урок 2.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m5_y2.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon30.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 3</h2><p class="lesson-desc">Kling. Морфинг, пролеты камеры, оживление.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m5_y3.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon31.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 4</h2><p class="lesson-desc">Sora, Seedance, Luma. Танцы и реклама.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m5_y4.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon32.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 5</h2><p class="lesson-desc">Midjourney Video.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m5_y5.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon33.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><h2 class="lesson-title">МОДУЛЬ 5 | УРОК 6</h2><p class="lesson-desc">Липсинг. Говорящие аватары.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m5_y6.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -406,26 +406,26 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon35.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 1</h2><p class="lesson-desc">Синтез речи, озвучка текста, генератор звуков.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 6 урок 1 .mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m6_y1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon36.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-170"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 2</h2><p class="lesson-desc">Suno. Создание песен и музыки для кино.</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 6 урок 2 .mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m6_y2.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon37.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-200"><h2 class="lesson-title">МОДУЛЬ 6 | УРОК 3</h2><p class="lesson-desc">Финальный монтаж.<br>От старта до продакшна.</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m6_y3.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
     <section class="block-38 overlay-container" id="section-pay" style="background-image: url('images/fon38.jpg');">
         <div class="block-38__content relative-z">
             <div class="price-card" onclick="openModal('modal-pay')">
-                <div class="badge">СТАРТ: 29 ДЕКАБРЯ</div>
+                <div class="badge">СТАРТ: 1 ЯНВАРЯ</div>
                 <p style="color:#bbb; margin-bottom:8px; font-size:13px;">Цена до конца января:</p>
                 <div>
                     <span class="price-old">7.000</span>
@@ -466,6 +466,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
