--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon15.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content w-180"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 1 | Ч.2</h2><p class="lesson-desc">Практика создания LORA во FLUX</p></div>
-            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/Модуль 2 урок 1 часть 2.mov" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m2_y1_2.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon16.jpg');">
@@ -466,6 +466,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
