--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
     <section class="lesson-section overlay-container" style="background-image: url('images/fon16.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 2 | Ч.1</h2><p class="lesson-desc">Создание LORA в HIGSFIELD</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m2_y2_1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
     <section class="lesson-section overlay-container" style="background-image: url('images/fon17.jpg');">
         <div class="container lesson-container relative-z">
             <div class="lesson-content"><div class="lesson-module">МОДУЛЬ 2</div><h2 class="lesson-title">УРОК 2 | Ч.2</h2><p class="lesson-desc">Практика в HIGSFIELD</p></div>
-            <a href="https://mail.google.com/" class="btn-primary">СМОТРЕТЬ</a>
+            <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m2_y2_2.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
     </section>
 
@@ -466,6 +466,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
