перед закрывающим тегом </body> вставил <div class="custom-modal" id="modal-success">

--- a/index.html
+++ b/index.html
@@ -463,9 +463,21 @@
         </div>
     </div>
 
+    <div class="custom-modal" id="modal-success">
+        <div class="modal-body" style="text-align: center;">
+            <h2 style="color: #00C851;">ОПЛАТА ПРОШЛА!</h2>
+            <p style="margin: 16px 0; font-size: 14px; line-height: 1.5;">
+                Мы получили ваш платеж.<br>
+                Письмо с доступом и паролем уже отправлено на вашу почту.
+            </p>
+            <button class="modal-btn" onclick="closeModals()">ПОНЯТНО</button>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
