--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     <div class="custom-modal" id="modal-success">
         <div class="modal-body" style="text-align: center;">
             <h2 style="color: #00C851;">ОПЛАТА ПРОШЛА!</h2>
-            <p style="margin: 16px 0; font-size: 14px; line-height: 1.5;">
+            <p style="margin: 16px 0; color: #fff; font-size: 14px; line-height: 1.5;">
                 Мы получили ваш платеж.<br>
                 Письмо с доступом и паролем уже отправлено на вашу почту.
             </p>
@@ -477,6 +477,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
