--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         <div class="modal-body">
             <h2>ОФОРМЛЕНИЕ</h2>
             <input type="text" id="pay-name" class="modal-input" placeholder="Имя">
-            <input type="tel" id="pay-phone" class="modal-input" placeholder="Телефон">
+            <input type="tel" id="pay-phone" class="modal-input" placeholder="Телефон (напр. +79990000000)">
             <input type="email" id="pay-email" class="modal-input" placeholder="Email">
             <button class="modal-btn" onclick="sendToN8N()">ОПЛАТИТЬ</button>
             <p style="color:#777; margin-top:12px; cursor:pointer; font-size:11px;" onclick="closeModals()">Закрыть</p>
@@ -477,6 +477,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
