--- a/index.html
+++ b/index.html
@@ -465,10 +465,11 @@
 
     <div class="custom-modal" id="modal-success">
         <div class="modal-body" style="text-align: center;">
-            <h2 style="color: #00C851;">ОПЛАТА ПРОШЛА!</h2>
+            <h2 style="color: #00C851;">ОБРАБОТКА ЗАКАЗА</h2>
             <p style="margin: 16px 0; color: #fff; font-size: 14px; line-height: 1.5;">
-                Мы получили ваш платеж.<br>
-                Письмо с доступом и паролем уже отправлено на вашу почту.
+                Мы ожидаем подтверждение от банка.<br><br>
+                <b>Если вы оплатили заказ:</b><br>
+                Письмо с паролем придет на вашу почту в течение 30 минут.
             </p>
             <button class="modal-btn" onclick="closeModals()">ПОНЯТНО</button>
         </div>
@@ -477,6 +478,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
