--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         <input type="checkbox" id="agreement-1" class="required-checkbox">
         <span class="checkmark"></span>
         <span class="label-text">
-            Нажимая кнопку, я принимаю условия <a href="https://ipv4.google.com/intl/ru/docs/about/" target="_blank">Публичной оферты</a>
+            Нажимая кнопку, я принимаю условия <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_failes%2F%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%BE%D1%84%D0%B5%D1%80%D1%82%D1%8B.docx" target="_blank">Публичной оферты</a>
         </span>
     </label>
 
@@ -462,7 +462,7 @@
         <input type="checkbox" id="agreement-2" class="required-checkbox">
         <span class="checkmark"></span>
         <span class="label-text">
-            Даю согласие на обработку моих персональных данных в соответствии с <a href="https://ipv4.google.com/intl/ru/docs/about/" target="_blank">Политикой конфиденциальности</a>
+            Даю согласие на обработку моих персональных данных в соответствии с <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_failes%2F%D1%81%D0%BE%D0%B3%D0%BB%D0%B0%D1%81%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BE%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D1%83%20%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85.docx" target="_blank">Политикой конфиденциальности</a>
         </span>
     </label>
 
@@ -522,6 +522,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
