--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                     <h3>Нужна помощь?</h3>
                     <p>Наша команда поддержки готова ответить на все ваши вопросы</p>
                 </div>
-                <a href="https://t.me/go43434" target="_blank" class="support-btn">
+                <a href="https://t.me/allleonova" target="_blank" class="support-btn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 0C5.374 0 0 5.373 0 12s5.374 12 12 12 12-5.373 12-12S18.626 0 12 0zm5.568 8.16l-1.61 7.59c-.12.54-.44.67-.89.42l-2.46-1.81-1.19 1.14c-.13.13-.24.24-.49.24l.17-2.43 4.47-4.03c.19-.17-.04-.27-.3-.1L9.28 13.47l-2.38-.75c-.52-.16-.53-.52.11-.77l9.28-3.58c.43-.16.81.11.67.73z"/>
                     </svg>
@@ -522,6 +522,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
