--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
     <div class="custom-modal" id="modal-success">
         <div class="modal-body" style="text-align: center;">
             <h2 style="color: #00C851;">ОБРАБОТКА ЗАКАЗА</h2>
-            <p style="margin: 16px 0; color: #333; font-size: 14px; line-height: 1.5;">
+            <p style="margin: 16px 0; color: #fff; font-size: 14px; line-height: 1.5;">
                 Мы ожидаем подтверждение от банка.<br><br>
                 <b>Если вы оплатили заказ:</b><br>
                 Письмо с паролем придет на вашу почту в течение 1-2 минут.
@@ -522,6 +522,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
