--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             <p style="margin: 16px 0; color: #fff; font-size: 14px; line-height: 1.5;">
                 Мы ожидаем подтверждение от банка.<br><br>
                 <b>Если вы оплатили заказ:</b><br>
-                Письмо с паролем придет на вашу почту в течение 1-2 минут.
+                Письмо с паролем придет на вашу почту в течение 5 минут.
             </p>
             <button class="modal-btn" onclick="closeModals()">ПОНЯТНО</button>
         </div>
@@ -522,6 +522,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
