--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <h2 class="lesson-title">УРОК 1</h2>
                 <p class="lesson-desc">Навигация по платформе Syntx. Альтернативы.<br>Какой GPT лучше использовать и почему.</p>
                 <a href="https://t.me/syntxaibot?start=aff_325696676" target="_blank" class="lesson-link">Перейти в Syntx AI Bot</a>
+                <a href="https://t.me/+VZjH_yV7i_xjNTAy" target="_blank" class="lesson-link">Чат учеников</a>
             </div>
             <a href="https://s3.ru1.storage.beget.cloud/ea682f4fd8a3-mesmerizing-phoenix/neiro_bistro_video/m1_y1.mp4" class="btn-primary">СМОТРЕТЬ</a>
         </div>
@@ -522,6 +523,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
