--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             
             <h2 style="font-size: 20px; margin: 32px 0 16px; color: #fff;">ПРИСОЕДИНЯЙТЕСЬ</h2>
             <div style="display:flex; gap:24px; justify-content:center;">
-                <a href="https://t.me/NEIRO_BISTRO_bot" target="_blank" style="color:var(--color-blue); font-weight:600; font-size:15px;">TELEGRAM</a>
+                <a href="https://t.me/neiro_bistro" target="_blank" style="color:var(--color-blue); font-weight:600; font-size:15px;">TELEGRAM</a>
                 <a href="https://www.instagram.com/neirobistro/" target="_blank" style="color:var(--color-pink); font-weight:600; font-size:15px;">INSTAGRAM</a>
             </div>
         </div>
@@ -523,6 +523,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
