--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                     <span class="price-old">7.000</span>
                     <span class="price-new">4.999 ₽</span>
                 </div>
-                <button class="buy-btn">КУПИТЬ КУРС</button>
+                <button class="buy-btn" onclick="ym(106501455, 'reachGoal', 'payment_click'); return true;">КУПИТЬ КУРС</button>
             </div>
             
             <h2 style="font-size: 20px; margin: 32px 0 16px; color: #fff;">ПРИСОЕДИНЯЙТЕСЬ</h2>
@@ -461,7 +461,7 @@
             <input type="text" id="pay-name" class="modal-input" placeholder="Имя">
             <input type="tel" id="pay-phone" class="modal-input" placeholder="Телефон (напр. +79990000000)">
             <input type="email" id="pay-email" class="modal-input" placeholder="Email">
-            <button class="modal-btn" id="pay-btn" onclick="ym(106501455, 'reachGoal', 'payment_click'); sendToN8N()">ОПЛАТИТЬ</button>
+            <button class="modal-btn" id="pay-btn" onclick="sendToN8N()">ОПЛАТИТЬ</button>
             
             <div class="agreement-section">
     <label class="checkbox-label">
@@ -536,6 +536,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
