--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     <section class="block-38 overlay-container" id="section-pay" style="background-image: url('images/fon38.jpg');">
         <div class="block-38__content relative-z">
             <div class="price-card" onclick="openModal('modal-pay')">
-                <p style="color:#bbb; margin-bottom:8px; font-size:13px;">Цена до конца января:</p>
+                <p style="color:#bbb; margin-bottom:8px; font-size:13px;">Цена до конца февраля:</p>
                 <div>
                     <span class="price-old">7.000</span>
                     <span class="price-new">4.999 ₽</span>
@@ -536,6 +536,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
