--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="images/logo1.png" alt="Neiro Bistro" class="block-1__logo relative-z">
         
         <button class="buy-btn relative-z" 
-                style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); width: max-content; padding: 15px 40px;" 
+                style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); width: max-content; padding: 15px 40px; background-color: #8fa8db;" 
                 onclick="ym(106501455, 'reachGoal', 'payment_click'); openModal('modal-pay');">
             КУПИТЬ КУРС
         </button>
@@ -542,6 +542,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
